--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -94,7 +94,7 @@ MEDIA QUERY
         max-height: 100vh; 
     }
     header {
-        padding-top: 27vh; 
+        padding-top: 24vh; 
     }
     button {
         background-color: white !important;
